--- a/html5up-dopetrope/assets/css/main.css
+++ b/html5up-dopetrope/assets/css/main.css
@@ -2156,9 +2156,9 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/pic01.jpg");
+		background: #CCE8F4 url("../../images/doubleme.jpg");
 		background-position: center center;
-		background-size: auto 100%;
+		background-size: 100%;
 		background-repeat: no-repeat;
 		text-align: center;
 		position: relative;
