--- a/html5up-dopetrope/assets/css/main.css
+++ b/html5up-dopetrope/assets/css/main.css
@@ -1572,6 +1572,7 @@ input, select, textarea {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 1.75em 2.75em 1.75em;
+		width: 100%;
 	}
 
 		.box .image.featured {
