--- a/html5up-dopetrope/assets/css/styles.css
+++ b/html5up-dopetrope/assets/css/styles.css
@@ -2,7 +2,7 @@
     display: flex;
 }
 
-..mg-row > .col-flex > .box {
+.mg-row > .col-flex > .box {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
