--- a/html5up-dopetrope/assets/css/styles.css
+++ b/html5up-dopetrope/assets/css/styles.css
@@ -9,7 +9,11 @@
     align-items: stretch;
  }
 
-.mg-row > .col-flex > .box > * {
+/* .mg-row > .col-flex > .box > * {
    display: flex;
-}
+} */
 
+/* .mg-row header > * {
+    display: block;
+    width: 100%;
+} */
